# cmake-helpers

./: .gitignore  CMakeLists.txt  SharemindCMakeHelpersConfig.cmake.in  SharemindCMakeHelpersConfigVersion.cmake.in
src/: Arguments.cmake  CMakeFindFiles.cmake  CMakeHelpersDir.cmake  CompileOptions.cmake  ConfigureFile.cmake  Definitions.cmake  Executable.cmake  FindFileConfig.cmake.in  FindFileConfigVersion.cmake.in  InterfaceLibrary.cmake  Lists.cmake  Misc.cmake  Packaging.cmake  Padding.cmake  Polymorphism.cmake  SecreC.cmake  SharedLibrary.cmake  SplitDebug.cmake  Strings.cmake  Targets.cmake  Tests.cmake  UserConfig.cmake  Variables.cmake  Versioning.cmake
